--- a/mod2-solutions/index.html
+++ b/mod2-solutions/index.html
@@ -1,10 +1,99 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="css">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Coursera Module 2 Solution</title>
+
+<style type="text/css">
+	* {
+  box-sizing: border-box;
+}
+
+h1 {
+	font-size: 27px;
+	font-family: monospace;
+	text-align: center;
+	color: #6600cc;
+	margin-bottom: 30px;
+}
+
+p {
+	padding: 15px 5px 0px 5px;
+	font-family: monospace;
+	font-size: 16px;
+	position: relative;
+}
+
+.section { 
+	background-color: #CCFFE5;
+   	border: 2px solid black;
+   	margin-top: 20px; 
+   	margin-right: 20px; 
+   	padding: 3px;
+   	text-align: justify;
+   	position: relative;
+ }
+
+span {
+	font-size: 20px;
+	width: 150px;
+	border: 1px solid black;
+	font-weight: bold;
+	text-align: center;
+	float: right; top :0; right: 0; margin: 0;
+	position: absolute;
+}
+#p1 {
+	background-color: #CCE5FF;
+	color: #003366;
+}
+#p2 {
+	background-color: #E5CCFF;
+	color: #003366;
+}
+#p3 {
+	background-color: #E5FFCC;
+	color: #003366;
+}
+}
+
+.row {
+	width: 100%;
+}
+
+/*** Desktop view ***/
+
+@media (min-width: 992px) {
+ 
+  .col-lg-4 {
+    width: 33.33%;
+    float: left;
+	}
+}
+
+/*** Tablet view ***/
+@media (min-width: 768px) and (max-width: 991px) {
+ 
+  .col-md-6 {
+    width: 50%;
+    float: left;
+  }
+  .col-md-12 {
+    width: 100%;
+    float: left;
+  }
+}
+/* mobile view */
+@media (max-width: 767px)  {
+  
+  .col-sx-12 {
+  	float: left;
+    width: 100%;
+  }
+}
+</style>
+
 </head>
 <body>
 <h1>Our Menu</h1>
