--- a/mod2-solutions/index.html
+++ b/mod2-solutions/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Coursera Module 2 Solution</title>
-<style type="text/css">
+<style>
 	* {
   box-sizing: border-box;
 }
